# arpesnet

./: .gitignore  ARPESNet.py  LICENSE  README.md  config.yml  env.yaml  pyproject.toml  setup.cfg
arpesnet/: __init__.py  core.py  model.py  train.py  transform.py  utils.py
notebooks/: Clustering application.ipynb  Training ARPESNet.ipynb
trained_model/: arpesnet_n2n_4k.pth
