[metadata]
name = arpesnet
version = attr: arpesnet.__version__
author = Steinn Ymir Agustsson
author_email = steinny@gmail.com
url = https://github.com/ARPES-on-the-fly/arpesnet
description = autoencoder for compression of for ARPES data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = nanoARPES, photoemission, NN,
license = MIT
classifiers =
    License :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
include_package_data = False
install_requires =
    numpy
    scipy 
    xarray
    pandas
    tqdm
    xarray >= 2023.2.0
    pyyaml 
    inflection >= 0.5.1
    torch >= 2.2.0
    torchvision
    torchmetrics

[options.extras_require]
notebook =
    jupyter >=1.0.0
    matplotlib >= 3.7
    ipykernel >= 6.21
    ipympl >= 0.9
    ipywidgets
dev =
    pre-commit
