[metadata]
name = arpesnet
version = 1.0.0
author = Steinn Ymir Agustsson, Mohammad Ahsanul Haque, Thi Tam Truong, Philip Hofmann
author_email = steinny@gmail.com
url = https://github.com/ARPES-on-the-fly/arpesnet
description = Autoencoder for compression of for ARPES data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ARPES, photoemission, Autoencoder, Spectroscopy, Compression, Machine Learning
license = GNU General Public License v3.0
classifiers =
    License :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
include_package_data = False
install_requires =
    numpy >= 1.23.0
    pandas
    tqdm
    pyyaml 
    torch >= 2.2.0
    torchvision
    torchmetrics

[options.extras_require]
notebooks =
    jupyter >=1.0.0
    matplotlib >= 3.7
    ipykernel >= 6.21
    ipympl >= 0.9
    ipywidgets
    scikit-learn >= 1.2.0
